Table user {
  id bigserial [pk]
  createdAt timestamp
  updatedAt timestamp
  profilePhoto text
  name text
  username text
  description text
  email text
  password text
}

Table post {
  id bigserial [pk]
  createdAt timestamp
  updatedAt timestamp
  image text
  caption text
  userId bigserial
}

Table comment {
  id bigserial [pk]
  createdAt timestamp
  updatedAt timestamp
  message text
  userId bigserial
  postId bigserial
}

Ref: post.userId < user.id
Ref: comment.userId < user.id
Ref: comment.postId < post.id